chore(sonarlint): Fix sonarlint issues
The touched modules and classes have many sonarlint issues. This fixes a few of them.